; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_json.c_poverall_datetime.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_json.c_poverall_datetime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DATE_TIME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"%Y-%m-%d %H:%M:%S %z\00", align 1
@now_tm = common dso_local global i32 0, align 4
@OVERALL_DATETIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @poverall_datetime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @poverall_datetime(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @DATE_TIME, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %5, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %6, align 8
  %11 = call i32 (...) @generate_time()
  %12 = load i32, i32* @DATE_TIME, align 4
  %13 = load i32, i32* @now_tm, align 4
  %14 = call i32 @strftime(i8* %10, i32 %12, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @OVERALL_DATETIME, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @pskeysval(i32* %15, i32 %16, i8* %10, i32 %17, i32 0)
  %19 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %19)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @generate_time(...) #2

declare dso_local i32 @strftime(i8*, i32, i8*, i32) #2

declare dso_local i32 @pskeysval(i32*, i32, i8*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
